--- a/bank_clients_research.ipynb
+++ b/bank_clients_research.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1-WifvESL1fvqsxRRU6n_LRheOw7yo9Jy",
-      "authorship_tag": "ABX9TyP7a4v8BjINT6j/wK2D8w1H",
+      "authorship_tag": "ABX9TyMqcty0BcuHKcaoO9dqOXa/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 2,
       "metadata": {
         "id": "1k10bFtGOS66"
       },
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "UhSa3KPgO7b9"
       },
-      "execution_count": 50,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -61,9 +61,9 @@
         },
         "collapsed": true,
         "id": "RmcVW77kS6iv",
-        "outputId": "e9a9afbe-9d32-4afd-fee8-83a555069ccd"
+        "outputId": "06551147-37b8-4b4b-994c-2f46dec14fc8"
       },
-      "execution_count": 51,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,7 +112,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dd31858a-589a-4c5a-a961-519d6146dee3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-73b8f331-b3b4-41b7-8c66-0d3538142415\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -282,7 +282,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dd31858a-589a-4c5a-a961-519d6146dee3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-73b8f331-b3b4-41b7-8c66-0d3538142415')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -334,12 +334,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dd31858a-589a-4c5a-a961-519d6146dee3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-73b8f331-b3b4-41b7-8c66-0d3538142415 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dd31858a-589a-4c5a-a961-519d6146dee3');\n",
+              "        const element = document.querySelector('#df-73b8f331-b3b4-41b7-8c66-0d3538142415');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -359,8 +359,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0f63f1ed-10d0-4964-8098-ab49d200471d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0f63f1ed-10d0-4964-8098-ab49d200471d')\"\n",
+              "<div id=\"df-ca6ca029-ce9f-4230-a044-278c1df65802\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ca6ca029-ce9f-4230-a044-278c1df65802')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -479,7 +479,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0f63f1ed-10d0-4964-8098-ab49d200471d button');\n",
+              "        document.querySelector('#df-ca6ca029-ce9f-4230-a044-278c1df65802 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -494,7 +494,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 4
         }
       ]
     },
@@ -508,10 +508,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MZIpeqSFUL_m",
-        "outputId": "a7033738-85a2-4491-85ef-5c879b993595",
+        "outputId": "89ecc88d-ef8a-4404-f9a0-4be1acb89c08",
         "collapsed": true
       },
-      "execution_count": 52,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,37 +524,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Приведение столбцов с датами к формату datetime\n",
-        "date_columns = ['CustomerDOB', 'TransactionDate']\n",
-        "for col in date_columns:\n",
-        "    df[col] = pd.to_datetime(df[col], errors='coerce')"
-      ],
-      "metadata": {
-        "id": "XJL-N5flh6Ut",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "outputId": "f86aa962-d647-4cf5-dc14-1f5b5bba67a3"
-      },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-53-374d4d455106>:4: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-            "  df[col] = pd.to_datetime(df[col], errors='coerce')\n",
-            "<ipython-input-53-374d4d455106>:4: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-            "  df[col] = pd.to_datetime(df[col], errors='coerce')\n"
-          ]
+          "execution_count": 5
         }
       ]
     },
@@ -570,7 +540,7 @@
         },
         "collapsed": true,
         "id": "InDduRRviKsi",
-        "outputId": "74df77cf-63d7-46e6-f12c-5e3ff0e8c258"
+        "outputId": "87bc0476-1523-40b8-cc7f-240392978538"
       },
       "execution_count": 6,
       "outputs": [
@@ -605,7 +575,7 @@
         },
         "collapsed": true,
         "id": "N9WqNBoViOd2",
-        "outputId": "8f774e07-7575-4b08-bb67-ec1b2a985b21"
+        "outputId": "c7ea8a52-f936-4a37-db7c-bc7dd98cc476"
       },
       "execution_count": 7,
       "outputs": [
@@ -656,9 +626,9 @@
         },
         "collapsed": true,
         "id": "Bg9YrPLtjHj9",
-        "outputId": "c23d8ba6-1faf-4d25-e75d-b5d9731fd1f3"
+        "outputId": "2eceeb5a-9a5c-4c8e-f181-47083d5473bb"
       },
-      "execution_count": 54,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,9 +650,9 @@
             "  CustomerDOB TransactionDate\n",
             "0  1994-10-01      2016-02-08\n",
             "1  2057-04-04      2016-02-08\n",
-            "2  1996-11-26      2016-02-08\n",
-            "3  2073-09-14      2016-02-08\n",
-            "4  1988-03-24      2016-02-08\n"
+            "2         NaT      2016-02-08\n",
+            "3         NaT      2016-02-08\n",
+            "4         NaT      2016-02-08\n"
           ]
         }
       ]
@@ -710,9 +680,9 @@
         },
         "collapsed": true,
         "id": "2M0-Jc5JjQ3s",
-        "outputId": "b928c751-205b-4a09-a6ae-f1686c5e2a8c"
+        "outputId": "d7acedde-7ae1-4574-f2ff-691b4946a8e1"
       },
-      "execution_count": 55,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -731,7 +701,7 @@
       "metadata": {
         "id": "5c8gBrHFjsZ4"
       },
-      "execution_count": 57,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -760,7 +730,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Определяем количество уникальных клиентов"
+        "**Определяем количество уникальных клиентов**"
       ],
       "metadata": {
         "id": "bi7LW2fkk1aI"
@@ -802,7 +772,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Количество уникальных клиентов : 879 358"
+        "Количество уникальных клиентов : **879 358**"
       ],
       "metadata": {
         "id": "WwyHaDSwmUEr"
@@ -843,15 +813,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Вывод"
-      ],
-      "metadata": {
-        "id": "qq9Qt0gLmfBM"
-      }
     },
     {
       "cell_type": "markdown",
@@ -903,7 +864,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Клиентская база, проработка"
+        "**Клиентская база, проработка**"
       ],
       "metadata": {
         "id": "46i211njnR3x"
