--- a/bank_clients_research.ipynb
+++ b/bank_clients_research.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1-WifvESL1fvqsxRRU6n_LRheOw7yo9Jy",
-      "authorship_tag": "ABX9TyMqcty0BcuHKcaoO9dqOXa/",
+      "mount_file_id": "https://gist.github.com/AnnaGipich/7a5cabdbdfb74a7a399781baeba6b3ec#file-bank_clients_research-ipynb",
+      "authorship_tag": "ABX9TyOzG7qocSX1v0KHG2R+bCQc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "1k10bFtGOS66"
       },
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "UhSa3KPgO7b9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "id": "RmcVW77kS6iv",
         "outputId": "06551147-37b8-4b4b-994c-2f46dec14fc8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -511,7 +511,7 @@
         "outputId": "89ecc88d-ef8a-4404-f9a0-4be1acb89c08",
         "collapsed": true
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -542,7 +542,7 @@
         "id": "InDduRRviKsi",
         "outputId": "87bc0476-1523-40b8-cc7f-240392978538"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +577,7 @@
         "id": "N9WqNBoViOd2",
         "outputId": "c7ea8a52-f936-4a37-db7c-bc7dd98cc476"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +628,7 @@
         "id": "Bg9YrPLtjHj9",
         "outputId": "2eceeb5a-9a5c-4c8e-f181-47083d5473bb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,7 +666,7 @@
       "metadata": {
         "id": "jkxeDemxjnL8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -682,7 +682,7 @@
         "id": "2M0-Jc5JjQ3s",
         "outputId": "d7acedde-7ae1-4574-f2ff-691b4946a8e1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,7 +701,7 @@
       "metadata": {
         "id": "5c8gBrHFjsZ4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -716,7 +716,7 @@
         "id": "NTb9fouxjh6G",
         "outputId": "3ca645e0-eb02-4a01-938f-bc6fdc4d4bbf"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +749,7 @@
         "id": "zbLEg19ak4nl",
         "outputId": "ef0d44d4-e524-4226-c9c6-b16a4270f74a"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +803,7 @@
         "id": "1jXSchrBmaTu",
         "outputId": "95e0356e-c46d-4278-aa00-568d859e5b42"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -839,7 +839,7 @@
         "id": "Ti1lMTSNmwqw",
         "outputId": "2f67ab0f-8b86-41c7-e897-f818b1a081ec"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +883,7 @@
         "id": "B39_2k4umiCQ",
         "outputId": "02fedc49-cc91-4be3-ec3a-70abb493fbec"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,7 +926,7 @@
         "outputId": "8db8167c-a7fd-412a-a028-1bc2a6537c8c",
         "collapsed": true
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,7 +988,7 @@
         "id": "Bb0D6V0Sun3S",
         "outputId": "fa3e6768-6d95-4cfe-f499-81136abe93e0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1049,7 @@
         "id": "2qL4IcKQW84V",
         "outputId": "258750f5-5877-45bc-d3a6-000da018b01a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1136,7 +1136,7 @@
         "id": "4cZnP0j7v-qF",
         "outputId": "236e824c-b5c7-4d57-f9f9-b7eaaa75e07c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1173,7 +1173,7 @@
         "id": "ggiNY6qdwKqJ",
         "outputId": "6a261473-372d-402b-9bd1-763ca362100a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,7 +1222,7 @@
         "id": "M0_8dxrpyKx8",
         "outputId": "4c624432-15ec-4d63-97ad-9163ebb6b471"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1303,7 +1303,7 @@
         "id": "CZQoSqnUyisP",
         "outputId": "1cbf0df4-3020-4aee-d2da-edb4cdf4cfab"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1356,7 +1356,7 @@
         "outputId": "ef6e1a56-3ffb-4de2-ed89-f5b6395361a0",
         "collapsed": true
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1437,7 +1437,7 @@
         "id": "Oq-20-_31E_f",
         "outputId": "70070d30-6a40-47e1-8905-be323f6eab30"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1490,7 +1490,7 @@
         "outputId": "17377abd-96af-4c3d-9062-cb68fad28994",
         "collapsed": true
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1525,7 +1525,7 @@
         "id": "-9LQxm0VDV6J",
         "outputId": "c5c19913-c574-4698-92a3-296c026accb3"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1602,7 +1602,7 @@
         "id": "M4LGkj8ay9WT",
         "outputId": "65418858-f2ff-473a-87ec-cb1c277db9b9"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1637,7 +1637,7 @@
         "id": "88ub05hjEJxN",
         "outputId": "72bea90c-3d72-4a98-c19b-fa1f4efa395f"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1735,7 +1735,7 @@
         "id": "EsVzdY5hGtk5",
         "outputId": "c180a2c5-8aa9-4249-92e4-91f8e2094477"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1796,7 +1796,7 @@
       "metadata": {
         "id": "EaFdZ-zUI5yR"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1834,7 +1834,7 @@
         "id": "qv-vkuEyJxSC",
         "outputId": "d5b07bfa-8f1d-40dc-d36c-64698b93a341"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1871,7 +1871,7 @@
         "outputId": "aa14a9ca-2d47-4fbe-9f57-f324bbc12f95",
         "collapsed": true
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1945,7 +1945,7 @@
         "id": "kWPOi267KsJ3",
         "outputId": "c7d4393f-f893-4659-9ef1-473274325592"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1999,7 +1999,7 @@
         "id": "eP7nsn4JNM1E",
         "outputId": "2d481907-96ed-4699-cd02-073110d92d29"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
