--- a/bank_clients_research.ipynb
+++ b/bank_clients_research.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "https://gist.github.com/AnnaGipich/7a5cabdbdfb74a7a399781baeba6b3ec#file-bank_clients_research-ipynb",
-      "authorship_tag": "ABX9TyOzG7qocSX1v0KHG2R+bCQc",
+      "mount_file_id": "1-WifvESL1fvqsxRRU6n_LRheOw7yo9Jy",
+      "authorship_tag": "ABX9TyMqcty0BcuHKcaoO9dqOXa/",
       "include_colab_link": true
     },
     "kernelspec": {
